[project]
name = "hma-rewriter"
version = "0.1.0"
description = "HMA rewriter"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "orjson>=3.11.5",
    "rich>=14.2.0",
    "typer>=0.20.0",
]
authors = [
  {name = "lovemilk2333", email = "zhuhansan666@outlook.com"},
  {name = "cyans_nya", email = "contact@cyans.me"}
]
